# MiracleDb

./: .gitignore  Cargo.toml  Cross.toml  README.md  ROADMAP.md  benchmark_query.py  build.rs  migrate.py  packager.py  test_release.py
.cargo/: config.toml
.github/workflows/: release.yml
benches/: search_performance.rs  wasm_udf_bench.rs
docs/: KAFKA_INTEGRATION.md  OBSERVABILITY.md  ONNX_ML_INFERENCE.md  RRF_HYBRID_SEARCH.md  ST_DISTANCE_USAGE.md
docs/features/: onnx_predict_udf.md
docs/plans/: 2026-02-22-100pct-completion-design.md  2026-02-22-100pct-implementation-plan.md  2026-02-23-ai-native-design.md  2026-02-23-ai-native-implementation.md  2026-02-24-wave-a-pgwire-design.md  2026-02-24-wave-a-pgwire-implementation.md
examples/: create_test_tables.rs  kafka_streaming.rs  onnx_fraud_detection.rs  rrf_hybrid_search.rs
proto/: cluster.proto
release/miracledb-v0.1.0-linux-x86_64/: README.md
scripts/: build-release.sh  package-release.sh
src/: lib.rs
src/aggregate/: mod.rs
src/ai/: embeddings.rs  hybrid_search.rs  mod.rs  provider.rs  text_to_sql.rs
src/alert/: mod.rs
src/analytics/: mod.rs
src/analyze/: mod.rs
src/api/: backup.rs  bulk_index.rs  dashboard.rs  dashboard_v2.rs  docs_api.rs  fulltext_index.rs  graphql.rs  mcp.rs  middleware.rs  ml.rs  mod.rs  notifications.rs  nucleus.rs  onnx.rs  rest.rs  spatial.rs  sql_ide.html  sse.rs  udf.rs  vector_index.rs  websocket.rs
src/audit/: merkle.rs  mod.rs
src/auth/: miracle_auth.rs  mod.rs  pqtoken.rs  token_manager.rs
src/backup/: mod.rs  scheduler.rs  storage.rs
src/blob/: mod.rs
src/blockchain/: audit_log.rs  mod.rs
src/bootstrap/: mod.rs
src/buffer/: mod.rs  persistence_test.rs  pool.rs
src/builder/: mod.rs
src/cache/: advanced.rs  mod.rs  qapc.rs  result_cache.rs
src/cast/: mod.rs
src/catalog/: mod.rs
src/catcache/: mod.rs
src/changelog/: mod.rs
src/chat/: mod.rs
src/checkpoint/: mod.rs
src/cli/: mod.rs
src/clog/: mod.rs
src/cluster/: coordinator.rs  discovery.rs  edge_sync.rs  executor.rs  mod.rs  node.rs  registry.rs  scheduler.rs  sharding.rs
src/collation/: mod.rs
src/comment/: mod.rs
src/common/: mod.rs
src/compression/: mod.rs
src/config/: mod.rs
src/constraint/: mod.rs
src/crypto/: mod.rs
src/cursor/: mod.rs
src/dependency/: mod.rs
src/diff/: mod.rs
src/docs/: mod.rs
src/domain/: mod.rs
src/embedded/: mod.rs
src/engine/: compliance.rs  heap_test.rs  htap.rs  mod.rs  table_provider.rs  transactions.rs  triggers.rs
src/events/: mod.rs
src/executor/: mod.rs
src/explain/: mod.rs
src/export/: mod.rs
src/expr/: mod.rs
src/extensions/: mod.rs
src/fdw/: mod.rs
src/federation/: mod.rs
src/financial/: decimal.rs  mod.rs  risk.rs
src/format/: mod.rs
src/fsm/: mod.rs
src/fulltext/: mod.rs
src/geospatial/: config.rs  manager.rs  mod.rs  optimizer.rs  table_provider.rs
src/governance/: mod.rs
src/graph/: mod.rs
src/health/: mod.rs
src/healthcare/: dicom.rs  fhir.rs  mod.rs
src/heap/: mod.rs
src/hook/: mod.rs
src/import/: mod.rs
src/index/: advisor.rs  bitmap.rs  mod.rs  partial.rs
src/integration/: cdc.rs  kafka.rs  mod.rs  postgres.rs
src/iot/: mod.rs  telemetry.rs
src/label/: mod.rs
src/lineage/: mod.rs
src/locking/: mod.rs
src/logs/: mod.rs
src/matview/: mod.rs  olap.rs
src/metrics/: mod.rs
src/migration/: mod.rs
src/ml/: automl.rs  candle_inference.rs  feature_store.rs  mod.rs
src/monitor/: mod.rs
src/mpc/: mod.rs
src/multixact/: mod.rs
src/namespace/: mod.rs
src/nlp/: mod.rs
src/notification/: mod.rs
src/nucleus/: mod.rs
src/observability/: api.rs  health.rs  metrics.rs  mod.rs  tracing.rs
src/operator/: mod.rs
src/optimizer/: mod.rs
src/parser/: mod.rs
src/partition/: mod.rs
src/permission/: mod.rs
src/pipeline/: mod.rs
src/plan/: mod.rs
src/planner/: mod.rs
src/plugin/: mod.rs  registry.rs  sdk.rs
src/policy/: mod.rs
src/pool/: mod.rs
src/portal/: mod.rs
src/postmaster/: mod.rs
src/prepared/: mod.rs
src/privilege/: mod.rs
src/profiler/: mod.rs
src/protocol/: mod.rs  mysql.rs  postgres.rs  type_map.rs
src/publication/: mod.rs
src/quality/: mod.rs
src/quota/: mod.rs
src/ratchet/: mod.rs
src/ratelimit/: mod.rs
src/realtime/: mod.rs  presence.rs  pubsub.rs
src/recovery/: backup.rs  mod.rs  shamir.rs
src/relcache/: mod.rs
src/replication/: mod.rs
src/retry/: mod.rs
src/rewrite/: mod.rs
src/rlm/: context.rs  mod.rs  tools.rs
src/routine/: mod.rs
src/rule/: mod.rs
src/sampling/: mod.rs
src/scheduler/: mod.rs
src/schema/: mod.rs
src/search/: mod.rs  rrf.rs
src/security/: ad.rs  apikey.rs  encryption.rs  masking.rs  mod.rs  mtls.rs  pqc.rs  privacy.rs  rbac.rs
src/sequence/: mod.rs
src/session/: mod.rs
src/signing/: mod.rs
src/slot/: mod.rs
src/smgr/: mod.rs
src/snapshot/: mod.rs
src/stats/: mod.rs
src/storage/: mod.rs
src/store/: mod.rs
src/streaming/: mod.rs
src/subscription/: mod.rs
src/syscache/: mod.rs
src/tablespace/: mod.rs
src/tcop/: mod.rs
src/template/: mod.rs
src/testing/: chaos.rs  feature_coverage.rs  mod.rs
src/timeseries/: mod.rs
src/toast/: mod.rs
src/trace/: mod.rs
src/transform/: mod.rs
src/udf/: candle.rs  geo.rs  media.rs  ml.rs  mod.rs  onnx.rs  search.rs  vector.rs  wasm.rs
src/vacuum/: mod.rs
src/validation/: mod.rs
test_data/: add_two_i64.wasm  strings.wasm
tests/: api_test.rs  core_engine_test.rs  distributed_test.rs  geospatial_test.rs  hybrid_search_test.rs  kafka_test.rs  ml_workflow_test.rs  notification_api_test.rs  onnx_test.rs  rest_test.rs  rrf_test.rs  sql_test.rs  transaction_test.rs  udf_test.rs  verify_features.rs  wasm_integration_test.rs  wasm_multi_arg_test.rs  wasm_string_test.rs
wasm_test_modules/: Cargo.toml  build.sh
(+27 files in other folders)
